--- a/async/common.css
+++ b/async/common.css
@@ -2,6 +2,8 @@ body{
     background-color:aquamarine;
 }
 #navbar{
+    position: fixed;
+    top: 0;
     display:flex;
     
     justify-content:space-between;
@@ -9,6 +11,8 @@ body{
     background-color:brown;
     margin:auto;
     border-radius:7px;
+    z-index:1;
+    
 
 
 }
@@ -21,7 +25,7 @@ body{
 h3{
     margin-left: 20px;
     color:white;
-    font-size:30px;
+    font-size:25px;
 }
 a{
     text-decoration:none;
@@ -45,17 +49,31 @@ input{
 }
 h1{
     text-align:center;
-    margin-top:80px;
+    margin-top:100px;
     font-weight: bold;
-    font-size:45px;
+    font-size:30px;
 }
 #sliding{
-    width:70%;
+    width:80%;
     height:300px;
     margin: auto;
-    margin-top:100px;
+    
+    
+    
+    
 }
 img{
     width:100%;
     border-radius:10px;
+    
+}
+#sliding img{
+    height:300px;
+}
+#movies{
+    display:grid;
+    grid-template-columns:repeat(3,1fr);
+    width:100%;
+    justify-content:space-between;
+    gap:15px;
 }
